
CHANGES IN `modeltools' VERSION 0.2-15

  o `Predict' didn't pass ... to `predict'

  o new generic and method `empty'

  o the `show' method now prints the number of columns if a data
    object has no colnames.

  o renamed `cluster' to `clusters' to avoid conflict with `cluster' 
    from package survival 


CHANGES IN `modeltools' VERSION 0.2-14

  o `object' in `Predict(object)' might be an S4 object and $ can't be used.

CHANGES IN `modeltools' VERSION 0.2-13

  o new generic Lapply


CHANGES IN `modeltools' VERSION 0.2-12

  o fix Rd problems

CHANGES IN `modeltools' VERSION 0.2-11

  o added argument newdata to generic cluster()

  o LazyLoad: yes

CHANGES IN `modeltools' VERSION 0.2-10

  o Added several generic functions: ICL, KLdiv, cluster, getModel, parameters,
    posterior, prior, refit, info, infoCheck

  o fix problems with evaluating subset arguments

CHANGES IN `modeltools' VERSION 0.2-9

  o the following code didn't work

    tmp <- function(formula, data = list(), subset = NULL) 
        ModelEnvFormula(formula, data, subset = subset, frame = parent.frame())
    foo <- function(x, y, ...) tmp(y ~ x, ...)
    a <- 1:10     
    b <- 1:10     
    stopifnot(identical(foo(a, b, subset = 1:5)@get("response")[[1]],1:5)) 
    ### was: couldn't find `y' when `frame' wasn't specified

    x <- 1
    y <- 2   
    stopifnot(identical(foo(a, b, subset = 1:5)@get("response")[[1]],1:5))   
    ### was: found `x' and `y' in .GlobalEnv when `frame' wasn't specified


CHANGES IN `modeltools' VERSION 0.2-8

  o ModelEnvFormula(y ~ 1) works now

  o new function MEapply (only roughly documented, more to come)

CHANGES IN `modeltools' VERSION 0.2-7

  o add methods and stats to Depends:

CHANGES IN `modeltools' VERSION 0.2-6

  o fix codetools problems

CHANGES IN `modeltools' VERSION 0.2-5

  o import(stats)

CHANGES IN `modeltools' VERSION 0.2-4

  o add survReg objects as an interface to survival::survreg

CHANGES IN `modeltools' VERSION 0.2-3
