@@ -3,14 +3,14 @@ import(stats)
 
 export(ModelEnvFormula, ModelEnvMatrix, linearModel, glinearModel,
        survReg, Predict, ICL, KLdiv, Lapply, clusters, getModel,
-       parameters, posterior, prior, refit, info, infoCheck)
+       parameters, posterior, prior, refit, info, infoCheck, relabel)
 
 exportClasses("ModelEnv", "FormulaParts", "ModelEnvFormula", "StatModel",
               "StatModelCapabilities")
 
 exportMethods("subset", "show", "dimension", "clone", "has", "initialize",
               "fit", "dpp", "na.omit", "na.fail", "na.pass", "subset",
-              "MEapply", "info", "empty")
+              "MEapply", "info", "empty", "relabel")
 
 S3method(fitted, linearModel)
 S3method(model.matrix, linearModel)
