@@ -1,3 +1,7 @@
+CHANGES IN `modeltools' VERSION 0.2-16
+
+  o new generic `relabel'
+
 
 CHANGES IN `modeltools' VERSION 0.2-15
 
